--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,28 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+body header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*mobile*/
+}
+@media (max-width: 500px) {
+}
+h1 {
+  padding: 0.5%;
+  font-size: 3.5rem;
+}
+nav {
+  padding: 1% 0%;
+  width: 90%;
+}
+a {
+  text-decoration: none;
+  margin: 0 -29% 0 32%;
+  font-size: 12px;
+  color: black;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
