--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,35 @@
 // Navigation code here
+
+body{
+header{
+    // border: 1px solid black;
+    // margin: px;
+    // padding: px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+
+    /*mobile*/
+ @media @phone{ 
+    // flex-direction: column;
+    // align-items: center;
+}
+}
+}
+
+h1{
+    padding: .5%;
+    font-size: 3.5rem;
+}
+nav{
+    padding: 1% 0%;
+     width: 90%;
+}
+a{
+    // align-content: center;
+    text-decoration: none;
+    margin: 0 -29% 0 32%;
+    font-size: 12px;
+    color: black;
+}
