--- a/less/home-page.less
+++ b/less/home-page.less
@@ -72,4 +72,54 @@
       }
     }
   }
-}// home
+}
+
+button{
+  .buttonTag
+
+}
+&:hover{
+    background-color: white;
+    color: black;
+  }// home
+
+body{
+
+  @media @phone{ 
+
+.space-images {
+    display:flex;
+    justify-content: center;
+    
+    .blast{
+      margin: -.1%;
+      width: 95%;
+      padding: 2%;
+      border-radius: 20px;
+    }
+    }
+    .sky{
+      display:none;
+    }
+    .launch{
+      display:none;
+    }
+
+    .walk-img{
+    display:column;
+    justify-content: center;
+    }
+
+h2{
+  display: left;
+  margin-left:-350px;
+}
+		// flex-wrap: wrap;
+		// box-sizing: border-box;
+		// align-items: stretch;
+
+    // flex-direction: column;
+    // align-items: center;
+
+}
+}
