--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,24 +12,24 @@ header{
 
     /*mobile*/
  @media @phone{ 
+
     // flex-direction: column;
     // align-items: center;
+
 }
 }
 }
 
 h1{
     padding: .5%;
-    font-size: 3.5rem;
+    .largestFont
 }
 nav{
     padding: 1% 0%;
      width: 90%;
 }
+
 a{
-    // align-content: center;
-    text-decoration: none;
-    margin: 0 -29% 0 32%;
-    font-size: 12px;
-    color: black;
+    .anchorPropsNav 
 }
+
