--- a/less/variables.less
+++ b/less/variables.less
@@ -25,3 +25,25 @@
 
 // Mobile var
 @phone: ~"(max-width: 500px)";
+
+// other mixins created
+.largestFont(){
+   font-size: 3.5rem; 
+}
+
+.anchorPropsNav(){
+    text-decoration: none;
+    margin: 0 -16% 0 20%;
+    font-size: 12px;
+    color: black;
+}
+
+.buttonTag{
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    width: 90px;
+    height: 32px;
+    font-size: 1.5rem;
+    border-radius: 4px;
+ }
