--- a/css/index.css
+++ b/css/index.css
@@ -169,27 +169,39 @@ p {
   width: 100%;
   margin: 0 auto;
 }
-body header {
+header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*mobile*/
 }
-@media (max-width: 500px) {
-}
-h1 {
-  padding: 0.5%;
-  font-size: 3.5rem;
-}
-nav {
-  padding: 1% 0%;
-  width: 90%;
-}
-a {
+header a {
+  padding: 4% 0%;
+  width: 100%;
   text-decoration: none;
-  margin: 0 -16% 0 20%;
   font-size: 12px;
   color: black;
+  margin: 4% 0;
+}
+header h1 {
+  font-size: 3.5rem;
+}
+@media (max-width: 500px) {
+  h1 {
+    padding: auto;
+    font-size: 3.5rem;
+    margin: auto;
+  }
+  nav {
+    padding: 2% 0%;
+    width: 90%;
+    margin: 0% -25% 0 20%;
+  }
+  a {
+    text-decoration: none;
+    font-size: 12px;
+    color: black;
+    text-align: center;
+  }
 }
 footer {
   color: #22283B;
@@ -282,6 +294,9 @@ button {
   body .launch {
     display: none;
   }
+  body .walk {
+    display: block;
+  }
   body .walk-img {
     display: column;
     justify-content: center;
@@ -289,5 +304,23 @@ button {
   body h2 {
     display: left;
     margin-left: -350px;
+  }
+}
+.container home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0%;
+  height: auto;
+}
+@media (max-width: 500px) {
+  display: flex;
+  flex-direction: column-reverse;
+  padding: 5px;
+  align-items: center;
+  margin-top: 30px;
+  height: auto;
+  .walk-text {
+    width: 50%;
   }
 }
