--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,35 +1,44 @@
 // Navigation code here
 
-body{
+// body{
+
+    
+   
 header{
-    // border: 1px solid black;
-    // margin: px;
-    // padding: px;
     display: flex;
     flex-direction: column;
     align-items: center;
-   
 
-    /*mobile*/
- @media @phone{ 
-
-    // flex-direction: column;
-    // align-items: center;
-
+   a{
+    padding: 4% 0%;
+     width: 100%;
+     text-decoration: none;
+     font-size: 12px;
+     color: black;
+     margin: 4% 0;
+    
+}
+h1{
+.largestFont();
 }
 }
-}
+  
+
+//  /*mobile*/
+ @media @phone{  
 
 h1{
-    padding: .5%;
-    .largestFont
+    padding: auto;
+    .largestFont();
+    margin: auto;
 }
 nav{
-    padding: 1% 0%;
+    padding: 2% 0%;
      width: 90%;
+     margin:0% -25% 0 20%;
 }
 
 a{
     .anchorPropsNav 
 }
-
+ }
