--- a/less/variables.less
+++ b/less/variables.less
@@ -29,13 +29,20 @@
 // other mixins created
 .largestFont(){
    font-size: 3.5rem; 
+//    width: 100%;
 }
 
 .anchorPropsNav(){
-    text-decoration: none;
-    margin: 0 -16% 0 20%;
-    font-size: 12px;
-    color: black;
+    // text-decoration: none;
+    // margin:0% -65% 0 90%;
+    // font-size: 12px;
+    // color: black;
+    // padding: 100% 0%;
+    //  width: 100%;
+     text-decoration: none;
+     font-size: 12px;
+     color: black;
+     text-align: center;
 }
 
 .buttonTag{
@@ -47,3 +54,11 @@
     font-size: 1.5rem;
     border-radius: 4px;
  }
+ 
+// parametric mixin
+ .custom-tag(@justified, @aligned){
+	display: flex;
+	justify-content: @justified;
+	align-items: @aligned;
+}
+.custom-ltag(center, flex-start);
