--- a/css/index.css
+++ b/css/index.css
@@ -169,39 +169,33 @@ p {
   width: 100%;
   margin: 0 auto;
 }
-header {
+body {
+  max-width: 600px;
+  margin: 0 auto;
+}
+body header {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-header a {
+body header img {
+  max-width: 600px;
+}
+body header nav {
+  margin: 1.5%;
+  text-align: center;
+}
+body header a {
   padding: 4% 0%;
   width: 100%;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 15px;
   color: black;
-  margin: 4% 0;
+  margin-left: 20px;
 }
-header h1 {
+body header h1 {
+  margin-top: 2%;
   font-size: 3.5rem;
-}
-@media (max-width: 500px) {
-  h1 {
-    padding: auto;
-    font-size: 3.5rem;
-    margin: auto;
-  }
-  nav {
-    padding: 2% 0%;
-    width: 90%;
-    margin: 0% -25% 0 20%;
-  }
-  a {
-    text-decoration: none;
-    font-size: 12px;
-    color: black;
-    text-align: center;
-  }
 }
 footer {
   color: #22283B;
@@ -298,8 +292,10 @@ button {
     display: block;
   }
   body .walk-img {
-    display: column;
-    justify-content: center;
+    margin: -0.1%;
+    width: 95%;
+    padding: 2%;
+    border-radius: 20px;
   }
   body h2 {
     display: left;
@@ -314,13 +310,32 @@ button {
   height: auto;
 }
 @media (max-width: 500px) {
-  display: flex;
-  flex-direction: column-reverse;
-  padding: 5px;
-  align-items: center;
-  margin-top: 30px;
-  height: auto;
-  .walk-text {
+  .walk {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
+@media (max-width: 500px) {
+  body img {
+    width: 500px;
+  }
+  body section .walk-text {
     width: 50%;
+  }
+  body section .btn {
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    width: 200px;
+    height: 45px;
+    font-size: 1.5rem;
+    border-radius: 4px;
+    text-align: center;
+    padding: 2%;
+    border: none;
+  }
+  body section .btn button {
+    border: none;
   }
 }
