--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,17 +1,14 @@
 // Home Content
 
 .home {
-
   .intro {
-
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
   }
 
   .space-images {
@@ -56,13 +53,12 @@
       p {
         margin-bottom: 26px;
       }
-
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
@@ -72,61 +68,56 @@
   }
 }
 
-button{
-  .buttonTag
-
+button {
+  .buttonTag;
 }
-&:hover{
-    background-color: white;
-    color: black;
-  }// home
+&:hover {
+  background-color: white;
+  color: black;
+} // home
 
-body{
+body {
+  @media @phone {
+    .space-images {
+      display: flex;
+      justify-content: center;
 
-  @media @phone{ 
-
-.space-images {
-    display:flex;
-    justify-content: center;
-    
-    .blast{
-      margin: -.1%;
+      .blast {
+        margin: -0.1%;
+        width: 95%;
+        padding: 2%;
+        border-radius: 20px;
+      }
+    }
+    .sky {
+      display: none;
+    }
+    .launch {
+      display: none;
+    }
+    .walk {
+      display: block;
+    }
+    .walk-img {
+      // display:column;
+      // justify-content: center;
+      margin: -0.1%;
       width: 95%;
       padding: 2%;
       border-radius: 20px;
     }
-    }
-    .sky{
-      display:none;
-    }
-    .launch{
-      display:none;
-    }
-.walk{
-  display: block;
-}
-    .walk-img{
-    // display:column;
-    // justify-content: center;
-    margin: -.1%;
-      width: 95%;
-      padding: 2%;
-      border-radius: 20px;
 
+    h2 {
+      display: left;
+      margin-left: -350px;
     }
-
-h2{
-  display: left;
-  margin-left:-350px;
-}
-		// flex-wrap: wrap;
-		// box-sizing: border-box;
-		// align-items: stretch;
+    // flex-wrap: wrap;
+    // box-sizing: border-box;
+    // align-items: stretch;
 
     // flex-direction: column;
     // align-items: center;
-
-}
+  }
 }
 
 .container home {
@@ -137,26 +128,81 @@ h2{
   height: auto;
 }
 
-@media @phone{
-      display:flex;
-      flex-direction: column-reverse;
-      padding: 5px;
-      align-items: center;
-      margin-top: 30px;
-      height: auto;
+// Mobile View
 
-      .walk-text{
-        width: 50%;
-      }
-.btn{
-  background-color: black;
-    color: white;
-    cursor: pointer;
-    width: 190px;
-    height: 32px;
-    font-size: 1.5rem;
-    border-radius: 4px;
+// @media @phone {
+  // display: flex;
+  // flex-direction: column-reverse;
+  // padding: 5px;
+  // align-items: center;
+  // margin-top: 30px;
+  // section{
+    
+//   .walk {
+//   display: flex;
+//   flex-direction: column-reverse;
+//   // padding: -6px;
+//   align-items: center;
+//   // margin-top: 30px;
+//   // height: auto;
+//   // }
+// }
+
+  // .walk-text {
+  //   width: 50%;
+  // }
+
+  // .btn {
+  //   background-color: black;
+  //   color: white;
+  //   cursor: pointer;
+  //   width: 190px;
+  //   height: 32px;
+  //   font-size: 1.5rem;
+  //   border-radius: 4px;
+  // }
 }
 
+@media @phone {
+  body {
+    width: 400px;
+    img {
+      // width: 600px;
+      margin: -0.1%;
+        width: 95%;
+        padding: 2%;
+        border-radius: 20px;
     }
-  
+    section {
+      .walk {
+  display: flex;
+  flex-direction: column-reverse;
+  padding: 0px;
+  margin: 0px;
+  align-items: center;
+  // margin-top: 30px;
+  // height: auto;
+  // }
+
+      .walk-text {
+    width: 50%;
+  }
+      .btn {
+        background-color: black;
+        color: white;
+        cursor: pointer;
+        width: 200px;
+        height: 45px;
+        font-size: 1.5rem;
+        border-radius: 4px;
+        text-align: center;
+        padding: 2%;
+        border: none;
+
+        button {
+          border: none;
+        }
+      }
+    }
+  }
+}
