--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,44 +1,37 @@
 // Navigation code here
 
-// body{
+body {
+  max-width: 600px;
+  margin: 0 auto;
 
-    
-   
-header{
+  header {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-   a{
-    padding: 4% 0%;
-     width: 100%;
-     text-decoration: none;
-     font-size: 12px;
-     color: black;
-     margin: 4% 0;
-    
-}
-h1{
-.largestFont();
-}
-}
-  
+    img {
+      max-width: 600px;
+    }
 
-//  /*mobile*/
- @media @phone{  
+    nav {
+      margin: 1.5%;
+      text-align: center;
+    }
 
-h1{
-    padding: auto;
-    .largestFont();
-    margin: auto;
-}
-nav{
-    padding: 2% 0%;
-     width: 90%;
-     margin:0% -25% 0 20%;
+    a {
+      padding: 4% 0%;
+      width: 100%;
+      text-decoration: none;
+      font-size: 15px;
+      color: black;
+      margin-left: 20px;
+    }
+    h1 {
+      margin-top: 2%;
+      .largestFont();
+    }
+  }
 }
 
-a{
-    .anchorPropsNav 
-}
- }
+
+ 
