--- a/less/variables.less
+++ b/less/variables.less
@@ -59,6 +59,6 @@
  .custom-tag(@justified, @aligned){
 	display: flex;
 	justify-content: @justified;
-	align-items: @aligned;
+   align-items: @aligned;
 }
-.custom-ltag(center, flex-start);
+// .custom-ltag(center, flex-start);
